ingress/kubernetes-dashboard/dashboard-ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /kubernetes-dashboard
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
  tls:
  - secretName: kubernetes-dashboard-tls-secret
    hosts:
      - k8s-dashboard.com
